// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FestivalInfoPage 테스트 > 스냅샷 테스트 > 로딩 상태 스냅샷 1`] = `
<div
  class="w-full h-full flex flex-col items-center bg-gray-100"
>
  <div
    class="min-h-screen pt-12 pb-15 max-w-[480px] w-full relative bg-white "
  >
    <div
      class="w-full mx-auto flex flex-col items-center fixed top-0 left-0 z-999 bg-gray-100"
    >
      <div
        class="w-full max-w-[480px] h-12 border-b border-gray-300 flex items-center bg-white justify-between"
      >
        <div
          class="flex-1 flex justify-start"
        >
          <button
            class="flex items-center justify-center hover:opacity-90 transition-opacity duration-100 w-fit cursor-pointer bg-transparent text-gray-900 text-md rounded-xl px-5 py-3 undefined "
            type="button"
          >
            <svg
              class="size-6"
              fill="none"
              height="28"
              stroke="black"
              stroke-width="3"
              viewBox="0 0 24 24"
              width="28"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 4 L8 12 L16 20"
              />
            </svg>
          </button>
        </div>
        <div
          class="flex-2 flex justify-center"
        >
          <h1
            class="text-md font-bold text-center"
          >
            축제 정보
          </h1>
        </div>
        <div
          class="flex-1 flex justify-end"
        />
      </div>
    </div>
    <div
      class="flex flex-col items-center justify-center h-[calc(100dvh-110px)]"
    >
      <div
        class="animate-spin rounded-full border-b-2 border-primary-300 h-12 w-12"
      />
      <p
        class="mt-4 text-lg text-gray-600"
      >
        축제 정보를 불러오는 중
      </p>
    </div>
    <div
      class="w-full mx-auto flex flex-col items-center fixed bottom-0 left-0 z-999"
    >
      <div
        class="w-full max-w-[480px] h-15 border-t border-gray-300 flex items-center bg-white"
      >
        <a
          class="flex-1 flex items-center justify-center"
          data-discover="true"
          href="/"
        >
          <button
            class="flex items-center justify-center hover:opacity-90 transition-opacity duration-100 w-fit cursor-pointer bg-transparent text-gray-900 text-md rounded-xl px-5 py-3 flex-col text-xs pt-2 pb-3 px-3 "
            type="button"
          >
            <svg
              class="size-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.99999 10L12 3L20 10L20 20H15V16C15 15.2044 14.6839 14.4413 14.1213 13.8787C13.5587 13.3161 12.7956 13 12 13C11.2043 13 10.4413 13.3161 9.87868 13.8787C9.31607 14.4413 9 15.2043 9 16V20H4L3.99999 10Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <p
              class="font-normal"
            >
              홈
            </p>
          </button>
        </a>
        <a
          class="flex-1 flex items-center justify-center"
          data-discover="true"
          href="/search"
        >
          <button
            class="flex items-center justify-center hover:opacity-90 transition-opacity duration-100 w-fit cursor-pointer bg-transparent text-gray-900 text-md rounded-xl px-5 py-3 flex-col text-xs pt-2 pb-3 px-3 "
            type="button"
          >
            <svg
              class="size-6"
              fill="none"
              height="24"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.7955 15.8111L21 21M18 10.5C18 14.6421 14.6421 18 10.5 18C6.35786 18 3 14.6421 3 10.5C3 6.35786 6.35786 3 10.5 3C14.6421 3 18 6.35786 18 10.5Z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <p
              class="font-normal"
            >
              검색
            </p>
          </button>
        </a>
        <a
          class="flex-1 flex items-center justify-center"
          data-discover="true"
          href="/pick/:areaId"
        >
          <button
            class="flex items-center justify-center hover:opacity-90 transition-opacity duration-100 w-fit cursor-pointer bg-transparent text-gray-900 text-md rounded-xl px-5 py-3 flex-col text-xs pt-2 pb-3 px-3 "
            type="button"
          >
            <svg
              class="size-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 64 64"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="34.52"
                cy="11.43"
                r="5.82"
              />
              <circle
                cx="53.63"
                cy="31.6"
                r="5.82"
              />
              <circle
                cx="34.52"
                cy="50.57"
                r="5.82"
              />
              <circle
                cx="15.16"
                cy="42.03"
                r="5.82"
              />
              <circle
                cx="15.16"
                cy="19.27"
                r="5.82"
              />
              <circle
                cx="34.51"
                cy="29.27"
                r="4.7"
              />
              <line
                x1="20.17"
                x2="28.9"
                y1="16.3"
                y2="12.93"
              />
              <line
                x1="38.6"
                x2="49.48"
                y1="15.59"
                y2="27.52"
              />
              <line
                x1="50.07"
                x2="38.67"
                y1="36.2"
                y2="46.49"
              />
              <line
                x1="18.36"
                x2="30.91"
                y1="24.13"
                y2="46.01"
              />
              <line
                x1="20.31"
                x2="28.7"
                y1="44.74"
                y2="48.63"
              />
              <line
                x1="17.34"
                x2="31.37"
                y1="36.63"
                y2="16.32"
              />
              <line
                x1="20.52"
                x2="30.34"
                y1="21.55"
                y2="27.1"
              />
              <line
                x1="39.22"
                x2="47.81"
                y1="29.8"
                y2="30.45"
              />
              <line
                x1="34.51"
                x2="34.52"
                y1="33.98"
                y2="44.74"
              />
            </svg>
            <p
              class="font-normal"
            >
              AI 추천
            </p>
          </button>
        </a>
        <a
          class="flex-1 flex items-center justify-center"
          data-discover="true"
          href="/mypage"
        >
          <button
            class="flex items-center justify-center hover:opacity-90 transition-opacity duration-100 w-fit cursor-pointer bg-transparent text-gray-900 text-md rounded-xl px-5 py-3 flex-col text-xs pt-2 pb-3 px-3 "
            type="button"
          >
            <svg
              class="size-6"
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 21C5 17.134 8.13401 14 12 14C15.866 14 19 17.134 19 21M16 7C16 9.20914 14.2091 11 12 11C9.79086 11 8 9.20914 8 7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7Z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            <p
              class="font-normal"
            >
              My
            </p>
          </button>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`FestivalPoster 컴포넌트 > 스냅샷 테스트 > 네비게이션 버튼 스냅샷 > next-button 1`] = `
<button
  aria-label="다음 이미지"
  class="absolute top-1/2 transform -translate-y-1/2 bg-black/30 hover:bg-black/50 text-white w-10 h-10 rounded-full flex items-center justify-center transition-all duration-200 hidden md:flex right-4"
>
  <svg
    class="stroke-white"
    fill="none"
    height="28"
    stroke="black"
    stroke-width="3"
    viewBox="0 0 24 24"
    width="28"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 4 L16 12 L8 20"
    />
  </svg>
</button>
`;

exports[`FestivalPoster 컴포넌트 > 스냅샷 테스트 > 네비게이션 버튼 스냅샷 > prev-button 1`] = `
<button
  aria-label="이전 이미지"
  class="absolute top-1/2 transform -translate-y-1/2 bg-black/30 hover:bg-black/50 text-white w-10 h-10 rounded-full flex items-center justify-center transition-all duration-200 hidden md:flex left-4"
>
  <svg
    class="stroke-white"
    fill="none"
    height="28"
    stroke="black"
    stroke-width="3"
    viewBox="0 0 24 24"
    width="28"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 4 L8 12 L16 20"
    />
  </svg>
</button>
`;

exports[`FestivalPoster 컴포넌트 > 스냅샷 테스트 > 메인 포스터 이미지 스냅샷 > main-poster-image 1`] = `
<img
  alt="가평 양떼목장 수국축제 - 1"
  class="w-full h-full object-contain select-none bg-gray-50"
  draggable="false"
  src="http://tong.visitkorea.or.kr/cms/resource/88/3503888_image2_1.png"
/>
`;

exports[`FestivalPoster 컴포넌트 > 스냅샷 테스트 > 인디케이터 영역 스냅샷 > indicator-container 1`] = `null`;

exports[`리뷰 섹션 컴포넌트 > 기본 렌더링 > 리뷰 섹션 스냅샷 > review-section 1`] = `null`;

exports[`리뷰 섹션 컴포넌트 > 기본 렌더링 > 첫 번째 리뷰 카드 구성 요소별 스냅샷 > first-review-content 1`] = `
<p
  class="text-sm text-gray-700"
>
  꽃이 예뻐요.
</p>
`;

exports[`리뷰 섹션 컴포넌트 > 기본 렌더링 > 첫 번째 리뷰 카드 구성 요소별 스냅샷 > first-review-first-image 1`] = `
<img
  alt="edit icon"
  class=""
  height="40"
  src="/pickEmoji/pickEdit.svg"
  width="40"
/>
`;

exports[`리뷰 섹션 컴포넌트 > 기본 렌더링 > 첫 번째 리뷰 카드 구성 요소별 스냅샷 > first-review-reviewer-name 1`] = `
<p
  class="font-medium text-gray-900"
>
  홍길동
</p>
`;

exports[`리뷰 섹션 컴포넌트 > 기본 렌더링 > 첫 번째 리뷰 카드 구성 요소별 스냅샷 > first-review-star-rating 1`] = `
<svg
  class="w-4 h-4 text-gray-300"
  fill="currentColor"
  stroke="none"
  stroke-width="0"
  viewBox="0 0 20 20"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
  />
</svg>
`;
